--- a/chat-app/public/index.html
+++ b/chat-app/public/index.html
@@ -5,6 +5,7 @@
       <input name="message" placeholder="Message" />
       <button type="submit">Send Message</button>
     </form>
+    <button id="send-location">Send Location</button>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/chat.js"></script>
   </body>
