--- a/chat-app/public/index.html
+++ b/chat-app/public/index.html
@@ -1,11 +1,27 @@
 <html>
   <body>
     <h1>Chat app</h1>
+
+    <div id="messages"></div>
     <form id="message-form">
       <input name="message" placeholder="Message" />
       <button type="submit">Send Message</button>
     </form>
     <button id="send-location">Send Location</button>
+
+    <script id="message-template" type="text/html">
+      <div>
+        <p>{{message}}</p>
+      </div>
+    </script>
+
+    <script id="location-message-template" type="text/html">
+      <p><a href="{{location}}">My current location</a></p>
+    </script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.6.0/qs.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/chat.js"></script>
   </body>
