--- a/chat-app/public/index.html
+++ b/chat-app/public/index.html
@@ -11,12 +11,12 @@
 
     <script id="message-template" type="text/html">
       <div>
-        <p>{{message}}</p>
+        <p>{{createdAt}} {{message}}</p>
       </div>
     </script>
 
     <script id="location-message-template" type="text/html">
-      <p><a href="{{location}}">My current location</a></p>
+      <p>{{createdAt}} <a href="{{location}}">My current location</a></p>
     </script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
